--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
+/target
+/classes
+/checkouts
 pom.xml
 pom.xml.asc
-*jar
-/lib/
-/classes/
-/target/
-/checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
-.nrepl-port
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
+.hgignore
+.hg/
+commons-daemon-1.0.15-bin-windows.zip
+/commons-daemon-1.0.15-bin-windows
+*.*~
+/dir-purger.config
